hphp/test/zend/good/Zend/tests/access_modifiers_006.php.expectf
Fatal error: Methods cannot have duplicate modifiers in %s/access_modifiers_006.php on line 4
